--- a/templates/auth/bottomBodyCheck.html
+++ b/templates/auth/bottomBodyCheck.html
@@ -11,10 +11,10 @@
     <title>台大新體健身房</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./css/gym.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/gym.css') }}" rel="stylesheet">
     <title>深蹲機</title>
 </head>
 
@@ -48,7 +48,7 @@
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">器材報到</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
-                        <a class="dropdown-item" href="leg_check.html">腿部伸張機</a>
+                        <a class="dropdown-item" href="legCheck.html">腿部伸張機</a>
                         <a class="dropdown-item" href="#">深蹲架</a>
                         <a class="dropdown-item" href="chestCheck.html">握推機</a>
                     </div>
@@ -88,14 +88,13 @@
     <!-- Placed at the end of the document so the pages load faster -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script>
-        window.jQuery || document.write('<script src="./js/jquery-slim.min.js"><\/script>')
-    </script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/holder.min.js"></script>
-    <script src="./js/jquery.countdown.js"></script>
-    <script src="./js/control.js"></script>
+
+    <script type=text/javascript src="{{ url_for('static', filename='js/jquery-slim.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/holder.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.countdown.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/control.js') }}"></script>
 </body>
 
 </html>
