--- a/templates/auth/bottomBodyCheck.html
+++ b/templates/auth/bottomBodyCheck.html
@@ -24,7 +24,7 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <img class="blog-header-logo text-dark" src="https://ntusportscenter.ntu.edu.tw/Uploads/admin/80eb9b2b-7a41-4246-96f1-d3cbe71c4d8c.png" href="#"></img>
+                <img class="blog-header-logo text-dark" src="{{ url_for('static', filename='images/gym_header.png') }}" href="#"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
@@ -48,9 +48,9 @@
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">器材報到</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
-                        <a class="dropdown-item" href="{{ url_for('auth.legCheck') }}">腿部伸張機</a>
+                        <a class="dropdown-item" href="legCheck.html">腿部伸張機</a>
                         <a class="dropdown-item" href="#">深蹲架</a>
-                        <a class="dropdown-item" href="{{ url_for('auth.chestCheck') }}">握推機</a>
+                        <a class="dropdown-item" href="chestCheck.html">握推機</a>
                     </div>
                 </li>
             </ul>
@@ -62,7 +62,7 @@
         <div class="container" style="max-width: 20rem">
             <h3>深蹲機</h3>
             <div class="card mb-10 box-shadow">
-                <img class="card-img-top" src="https://i.imgur.com/3dwayfq.jpg" width="30" height="255" data-src="holder.js/100px225?theme=sky&bg=4d6a5d&fg=eceeef&text=腿部伸張機" alt="Card image cap" data-toggle="modal" data-target="#leg">
+                <img class="card-img-top" src="{{ url_for('static', filename='images/gym_header.png') }}" width="30" height="255" data-src="holder.js/100px225?theme=sky&bg=4d6a5d&fg=eceeef&text=腿部伸張機" alt="Card image cap" data-toggle="modal" data-target="#leg">
             </div>
         </div>
         <div class="text-center form-signin">
