--- a/templates/auth/bottomBodyCheck.html
+++ b/templates/auth/bottomBodyCheck.html
@@ -40,17 +40,17 @@
         <div class="collapse navbar-collapse" id="navbarsExample04" style="text-align:center">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">本館資訊 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('auth.index') }}">本館資訊 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="page1.html">器材租借</a>
+                    <a class="nav-link" href="{{ url_for('auth.page1') }}">器材租借</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">器材報到</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
-                        <a class="dropdown-item" href="legCheck.html">腿部伸張機</a>
+                        <a class="dropdown-item" href="{{ url_for('auth.legCheck') }}">腿部伸張機</a>
                         <a class="dropdown-item" href="#">深蹲架</a>
-                        <a class="dropdown-item" href="chestCheck.html">握推機</a>
+                        <a class="dropdown-item" href="{{ url_for('auth.chestCheck') }}">握推機</a>
                     </div>
                 </li>
             </ul>
