--- a/templates/auth/page1.html
+++ b/templates/auth/page1.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+<form action="" method="POST">
     <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
@@ -100,7 +101,8 @@
                                                             <div class="col card-text  nopadding">驗證碼:</div>
                                                             <div class="col-md-5 card-text  nopadding" id="rand_num_pop"></div>
                                                             <button type="button" class="btn btn-default" data-dismiss="modal" id="cancel_button">取消</button>
-                                                            <button type="button" class="btn btn-primary" onclick="changeText(this)" id="ansure_button">確定預約</button>
+                                                            <!--<button type="button" class="btn btn-primary" onclick="changeText(this)" id="ansure_button">確定預約</button>-->
+                                                            <input type="button" name="submit" value="leg" class="btn btn-primary" onclick="changeText(this)" id="ansure_button">確定預約</input>
                                                         </div>
                                                     </div>
                                                     <!-- /.modal-content -->
@@ -145,7 +147,8 @@
                                                             <div class="col card-text  nopadding">驗證碼:</div>
                                                             <div class="col-md-5 card-text  nopadding" id="rand_num_pop1"></div>
                                                             <button type="button" class="btn btn-default" data-dismiss="modal" id="cancel_button1">取消</button>
-                                                            <button type="button" class="btn btn-primary" onclick="changeText(this)" id="ansure_button1">確定預約</button>
+                                                            <!--<button type="button" class="btn btn-primary" onclick="changeText(this)" id="ansure_button1">確定預約</button>-->
+                                                            <input type="button" name="submit" value="bottomBody" class="btn btn-primary" onclick="changeText(this)" id="ansure_button1">確定預約</input>
                                                         </div>
                                                     </div>
                                                     <!-- /.modal-content -->
@@ -189,7 +192,8 @@
                                                             <div class="col card-text  nopadding">驗證碼:</div>
                                                             <div class="col-md-5 card-text  nopadding" id="rand_num_pop2"></div>
                                                             <button type="button" class="btn btn-default" data-dismiss="modal" id="cancel_button2">取消</button>
-                                                            <button type="button" class="btn btn-primary" onclick="changeText(this)" id="ansure_button2">確定預約</button>
+                                                            <!--<button type="button" class="btn btn-primary" onclick="changeText(this)" id="ansure_button2">確定預約</button>-->
+                                                            <input type="button" name="submit" value="chest" class="btn btn-primary" onclick="changeText(this)" id="ansure_button2">確定預約</input>
                                                         </div>
                                                     </div>
                                                     <!-- /.modal-content -->
@@ -235,7 +239,7 @@
     <script src="{{ url_for('static', filename='js/holder.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.countdown.js') }}"></script>
     <script src="{{ url_for('static', filename='js/control.js') }}"></script>
-
+</form>
 </body>
 
 </html>
