--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -12,6 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/all.css') }}" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
 
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', filename='css/gym.css') }}" rel="stylesheet">
@@ -23,11 +25,11 @@
             <div class="col-4 pt-1">
             </div>
             <div class="col-4 text-center">
-                <img class="blog-header-logo text-dark" src="{{ url_for('static', filename='images/gym_header.png') }}" href="#"></img>
+                <a href="{{ url_for('auth.index') }}"><img class="blog-header-logo text-dark" src="{{ url_for('static', filename='images/gym_header.png') }}"></img>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
-                <a class="btn btn-sm btn-outline-secondary" href="#">Sign in</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('auth.signup') }}">Sign up</a>
+                <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('auth.login') }}">Sign in</a>
             </div>
         </div>
     </header>
@@ -39,7 +41,7 @@
         <div class="collapse navbar-collapse" id="navbarsExample04" style="text-align:center">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">本館資訊 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{{ url_for('auth.index') }}">本館資訊 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="{{ url_for('auth.page1') }}">器材租借</a>
@@ -47,7 +49,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">器材報到</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
-                        <a class="dropdown-item" href="{{ url_for('auth.legCheck') }}">腿部伸張機</a>
+                        <a class="dropdown-item" href="{{ url_for('auth.leg_check') }}">腿部伸張機</a>
                         <a class="dropdown-item" href="{{ url_for('auth.bottomBodyCheck') }}">深蹲架</a>
                         <a class="dropdown-item" href="{{ url_for('auth.chestCheck') }}">握推機</a>
                     </div>
@@ -55,14 +57,43 @@
             </ul>
         </div>
     </nav>
+    <!--==================================
+                    BG
+  ====================================-->
+    <div class="top"></div>
+    <!--==================================
+                INTRO
+====================================-->
+    <div class="mid">
+        <div id=intro_text>
+            <h1 id=topic>台大新體健身房</h1>
+            <!----<a id=name>現在時間：</a> -->
+            <div style="height:100%">
+                <iframe scrolling="no" frameborder="no" clocktype="html5" style="margin-top:25px;display:block;margin-left:auto;margin-right:auto;overflow:hidden;border:0px;padding:0;width:380px;height:80px;" src="https://www.clocklink.com/html5embed.php?clock=047&timezone=GMT0800&color=gray&size=380&Title=&Message=&Target=&From=2019,1,1,0,0,0&Color=gray"></iframe>
+            </div>
+            <div style="margin-top:80px">
 
-	<div align="center">
-		{% for s in info %}
-			{{s}}<br/>
-		{% endfor %}
-	</div>
+                <ul style='width:70%; margin: auto'>
 
+                    <li id="li1"><a>健身中心現在人數：      0人</a></li>
+                    <li id="li2"><a>健身中心最適人數：      0人</a></li>
+                    <li id="li3"><a>健身中心最大乘載人數：      0人</a></li>
+                </ul>
+            </div>
+            <div style="text-align: center;margin-top: 80px">
+                <a href="{{ url_for('auth.page1') }}" class="btn btn-primary">進入租借</a>
+            </div>
+        </div>
+    </div>
 
+    <footer class="text-muted">
+        <div class="container">
+            <p class="float-right">
+                <a href="#">Back to top</a>
+            </p>
+            <p>健身房系統 &copy;BigJJ</p>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
@@ -72,6 +103,7 @@
     <script src="{{ url_for('static', filename='js/holder.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.countdown.js') }}"></script>
     <script src="{{ url_for('static', filename='js/control.js') }}"></script>
+
 </body>
 
 
